add todo designed

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,4 +1,4 @@
-@use '../../public/styles/constants';
+@use '../../styles/constants';
 
 .headerWrapper {
     background-color: constants.$app-color;
