--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -3,9 +3,12 @@
 .headerWrapper {
     background-color: constants.$app-color;
     padding: .5em;
+   
 }
 
 .headerTitle {
     color: #fff;
-    font-size: 1.5em;
+    font-size: 1.2em;
+    margin-left: 20px;
+    
 }
